--- a/HMock/HttpServerMock.csproj
+++ b/HMock/HttpServerMock.csproj
@@ -44,9 +44,8 @@
     <DocumentationFile>bin\Release\HttpServerMock.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -72,26 +71,20 @@
   <ItemGroup>
     <Compile Include="Exceptions\HttpServerCallsVerificationException.cs" />
     <Compile Include="ExtensionMethods\HttpServerMockExtensions.cs" />
-    <Compile Include="ExtensionMethods\RequestExpectationExtensions.cs" />
-    <Compile Include="ExtensionMethods\RequestMockResponseExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Helper.cs" />
-    <Compile Include="HttpRequestContentType.cs" />
-    <Compile Include="HttpMethod.cs" />
     <Compile Include="HttpServerMock.cs" />
-    <Compile Include="Internals\HHttpMessageHandler.cs" />
     <Compile Include="Internals\HHttpRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestBehavior.cs" />
-    <Compile Include="RequestExpectation.cs" />
-    <Compile Include="RequestMock.cs" />
-    <Compile Include="RequestMockResponse.cs" />
-    <Compile Include="ServerRequestsState.cs" />
-    <Compile Include="UnexpectedRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HMock.Common\HMock.Common.csproj">
+      <Project>{766a8787-f187-4d8f-8bc7-f6389fee67f6}</Project>
+      <Name>HMock.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
