--- a/HMock.Common/HttpServerMock.Common.csproj
+++ b/HMock.Common/HttpServerMock.Common.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.2</TargetFramework>
+    <AssemblyName>HttpServerMock.Common</AssemblyName>
+    <RootNamespace>HttpServerMock.Common</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
