--- a/HMock/packages.config
+++ b/HMock/packages.config
@@ -3,5 +3,8 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.0" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
 </packages>
