--- a/HMockTests/packages.config
+++ b/HMockTests/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.0" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="RestSharp" version="105.0.1" targetFramework="net451" />
 </packages>
